// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddedToBagActions native component AddedToBagActions native component renders correctly 1`] = `
<Styled(View)>
  <Styled(View)
    isPayPalWebViewEnable={false}
  >
    <Styled(TouchableOpacity)
      onPress={[Function]}
    >
      <Styled(BodyCopy)
        accessibilityText=""
        color="white"
        dataLocator=""
        fontFamily="secondary"
        fontSize="fs13"
        fontWeight="extrabold"
        margin={null}
        numberOfLines={null}
        text="VIEW BAG"
        textDecoration={null}
        textTransform="uppercase"
      />
    </Styled(TouchableOpacity)>
  </Styled(View)>
  <Connect(AddedToBagContainer)
    navigation={
      Object {
        "state": Object {
          "routeName": "BagPage",
        },
      }
    }
  />
</Styled(View)>
`;

exports[`AddedToBagActions native component AddedToBagActions renders correctly with Venmo Button 1`] = `
<Styled(View)>
  <Styled(View)
    isPayPalWebViewEnable={false}
  >
    <Styled(TouchableOpacity)
      onPress={[Function]}
    >
      <Styled(BodyCopy)
        accessibilityText=""
        color="white"
        dataLocator=""
        fontFamily="secondary"
        fontSize="fs13"
        fontWeight="extrabold"
        margin={null}
        numberOfLines={null}
        text="VIEW BAG"
        textDecoration={null}
        textTransform="uppercase"
      />
    </Styled(TouchableOpacity)>
  </Styled(View)>
  <Styled(View)
    isBottomGap={false}
  >
    <Styled(View)>
      <Styled(View)
        isAddedTobag={true}
      />
      <Connect(ClickTracker)
        as={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "displayName": "Styled(TouchableOpacity)",
            "getDefaultProps": [Function],
            "inlineStyle": InlineStyle {
              "rules": Array [
                "
  background: ",
                [Function],
                ";
  display: flex;

  height: 42px;
  justify-content: center;
  align-items: center;
  ",
                [Function],
                "
",
              ],
            },
            "render": [Function],
            "styledComponentId": "StyledNativeComponent",
            "target": [Function],
            "withComponent": [Function],
          }
        }
        clickData={
          Object {
            "customEvents": Array [
              "event8",
            ],
            "products": Array [],
          }
        }
        isAddedTobag={true}
        module="checkout"
        name="checkout_button"
        onPress={[Function]}
        pageData={
          Object {
            "pageName": "shopping bag",
            "pageSection": "shopping bag",
            "pageShortName": "shopping bag",
            "pageSubSection": "shopping bag",
            "pageSubSubSection": "shopping bag",
            "pageType": "shopping bag",
          }
        }
      >
        <Styled(BodyCopy)
          accessibilityText=""
          color="white"
          dataLocator=""
          fontFamily="secondary"
          fontSize="fs13"
          fontWeight="extrabold"
          margin={null}
          numberOfLines={null}
          text="CHECKOUT"
          textDecoration={null}
        />
      </Connect(ClickTracker)>
    </Styled(View)>
  </Styled(View)>
  <Connect(AddedToBagContainer)
    navigation={
      Object {
        "state": Object {
          "routeName": "BagPage",
        },
      }
    }
  />
</Styled(View)>
`;
